--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         </button>
 
         <ul class="mob__menu">
-          <li class="mob__menu--item"><a href="/index.html" class="mob__menu--link">Студія</a></li>
+          <li class="mob__menu--item"><a href="./index.html" class="mob__menu--link">Студія</a></li>
           <li class="mob__menu--item">
-            <a href="/portfolio.html" class="mob__menu--link">Портфоліо</a>
+            <a href="./portfolio.html" class="mob__menu--link">Портфоліо</a>
           </li>
           <li class="mob__menu--item"><a href="" class="mob__menu--link">Контакти</a></li>
         </ul>
