--- a/index.html
+++ b/index.html
@@ -306,9 +306,16 @@
               <div class="team__img--box">
                 <img
                   class="team__img"
-                  srcset="images/ihor-450.jpg 1x, images/ihor-900.jpg 2x"
-                  src="images/ihor-450.jpg"
-                  width="450"
+                  srcset="
+                    ./images/ihor-desk-1x.jpg 270w,
+                    ./images/ihor-tabl-1x.jpg 354w,
+                    ./images/ihor-mob-1x.jpg  450w,
+                    ./images/ihor-desk-2x.jpg 540w,
+                    ./images/ihor-tabl-2x.jpg 708w,
+                    ./images/ihor-mob-2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
+                  src="./images/ihor-desk-1x.jpg"
                   alt="ігорфото"
                 />
               </div>
@@ -352,9 +359,16 @@
               <div class="team__img--box">
                 <img
                   class="team__img"
-                  srcset="images/olha-450.jpg 1x, images/olha-900.jpg 2x"
-                  src="images/olha-450.jpg"
-                  width="450"
+                  srcset="
+                    ./images/olha-desk-1x.jpg 270w,
+                    ./images/olha-tabl-1x.jpg 354w,
+                    ./images/olha-mob-1x.jpg  450w,
+                    ./images/olha-desk-2x.jpg 540w,
+                    ./images/olha-tabl-2x.jpg 708w,
+                    ./images/olha-mob-2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
+                  src="./images/olha-desk-1x.jpg"
                   alt="ольгафото"
                 />
               </div>
@@ -398,9 +412,16 @@
               <div class="team__img--box">
                 <img
                   class="team__img"
-                  srcset="images/mykola-450.jpg 1x, images/mykola-900.jpg 2x"
-                  src="images/mykola-450.jpg"
-                  width="450"
+                  srcset="
+                    ./images/mykola-desk-1x.jpg 270w,
+                    ./images/mykola-tabl-1x.jpg 354w,
+                    ./images/mykola-mob-1x.jpg  450w,
+                    ./images/mykola-desk-2x.jpg 540w,
+                    ./images/mykola-tabl-2x.jpg 708w,
+                    ./images/mykola-mob-2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
+                  src="./images/mykola-desk-1x.jpg"
                   alt="миколафото"
                 />
               </div>
@@ -444,9 +465,16 @@
               <div class="team__img--box">
                 <img
                   class="team__img"
-                  srcset="images/myhailo-450.jpg 1x, images/myhailo-900.jpg 2x"
-                  src="images/myhailo-450.jpg"
-                  width="450"
+                  srcset="
+                    ./images/myhailo-desk-1x.jpg 270w,
+                    ./images/myhailo-tabl-1x.jpg 354w,
+                    ./images/myhailo-mob-1x.jpg  450w,
+                    ./images/myhailo-desk-2x.jpg 540w,
+                    ./images/myhailo-tabl-2x.jpg 708w,
+                    ./images/myhailo-mob-2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
+                  src="./images/myhailo-desk-1x.jpg"
                   alt="михайлофото"
                 />
               </div>
