--- a/index.html
+++ b/index.html
@@ -307,15 +307,15 @@
                 <img
                   class="team__img"
                   srcset="
-                    ./images/ihor-desk-1x.jpg 270w,
-                    ./images/ihor-tabl-1x.jpg 354w,
-                    ./images/ihor-mob-1x.jpg  450w,
-                    ./images/ihor-desk-2x.jpg 540w,
-                    ./images/ihor-tabl-2x.jpg 708w,
-                    ./images/ihor-mob-2x.jpg  900w
+                    ./images/ihor-270-1x.jpg 270w,
+                    ./images/ihor-354-1x.jpg 354w,
+                    ./images/ihor-450-1x.jpg 450w,
+                    ./images/ihor-540-2x.jpg 540w,
+                    ./images/ihor-708-2x.jpg 708w,
+                    ./images/ihor-900-2x.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
-                  src="./images/ihor-desk-1x.jpg"
+                  src="./images/ihor-270-1x.jpg"
                   alt="ігорфото"
                 />
               </div>
@@ -360,15 +360,15 @@
                 <img
                   class="team__img"
                   srcset="
-                    ./images/olha-desk-1x.jpg 270w,
-                    ./images/olha-tabl-1x.jpg 354w,
-                    ./images/olha-mob-1x.jpg  450w,
-                    ./images/olha-desk-2x.jpg 540w,
-                    ./images/olha-tabl-2x.jpg 708w,
-                    ./images/olha-mob-2x.jpg  900w
+                    ./images/olha-270-1x.jpg 270w,
+                    ./images/olha-354-1x.jpg 354w,
+                    ./images/olha-450-1x.jpg 450w,
+                    ./images/olha-540-2x.jpg 540w,
+                    ./images/olha-708-2x.jpg 708w,
+                    ./images/olha-900-2x.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
-                  src="./images/olha-desk-1x.jpg"
+                  src="./images/olha-270-1x.jpg"
                   alt="ольгафото"
                 />
               </div>
@@ -413,15 +413,15 @@
                 <img
                   class="team__img"
                   srcset="
-                    ./images/mykola-desk-1x.jpg 270w,
-                    ./images/mykola-tabl-1x.jpg 354w,
-                    ./images/mykola-mob-1x.jpg  450w,
-                    ./images/mykola-desk-2x.jpg 540w,
-                    ./images/mykola-tabl-2x.jpg 708w,
-                    ./images/mykola-mob-2x.jpg  900w
+                    ./images/mykola-270-1x.jpg 270w,
+                    ./images/mykola-354-1x.jpg 354w,
+                    ./images/mykola-450-1x.jpg 450w,
+                    ./images/mykola-540-2x.jpg 540w,
+                    ./images/mykola-708-2x.jpg 708w,
+                    ./images/mykola-900-2x.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
-                  src="./images/mykola-desk-1x.jpg"
+                  src="./images/mykola-270-1x.jpg"
                   alt="миколафото"
                 />
               </div>
@@ -466,15 +466,15 @@
                 <img
                   class="team__img"
                   srcset="
-                    ./images/myhailo-desk-1x.jpg 270w,
-                    ./images/myhailo-tabl-1x.jpg 354w,
-                    ./images/myhailo-mob-1x.jpg  450w,
-                    ./images/myhailo-desk-2x.jpg 540w,
-                    ./images/myhailo-tabl-2x.jpg 708w,
-                    ./images/myhailo-mob-2x.jpg  900w
+                    ./images/myhailo-270-1x.jpg 270w,
+                    ./images/myhailo-354-1x.jpg 354w,
+                    ./images/myhailo-450-1x.jpg 450w,
+                    ./images/myhailo-540-2x.jpg 540w,
+                    ./images/myhailo-708-2x.jpg 708w,
+                    ./images/myhailo-900-2x.jpg 900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, (max-width: 479px) 90vw"
-                  src="./images/myhailo-desk-1x.jpg"
+                  src="./images/myhailo-270-1x.jpg"
                   alt="михайлофото"
                 />
               </div>
